# oscl

./: .gitignore  CMakeLists.txt  README.md
3dparty/FakenMC-generateData/: createClusters.m
3dparty/hmp_original/demo_rgbd/: gen_normal.m  histogram_intersection.m  liblinear_svm.m  rgbdeval_hmp_ksvd_depth.m  rgbdeval_hmp_ksvd_joint.m  rgbdeval_hmp_ksvd_rgb.m  rgbdsubset_hmp_ksvd_depth.m  rgbdsubset_hmp_ksvd_joint.m  rgbdsubset_hmp_ksvd_rgb.m  untitled.m
3dparty/hmp_original/demo_rgbd/dic_subset/: rgb51_dic_5x5_graycrop.mat  rgb51_dic_5x5_rgbcrop.mat  rgbdeval_dic_5x5_1st_graycrop.mat  rgbdeval_dic_5x5_1st_rgbcrop.mat
3dparty/hmp_original/omp_layer1/: omp_coding_layer1.m  omp_pooling_layer1.m  omp_pooling_layer1_batch.m
app/: hmp.config
app/hmp/: apple_1_1_1_normal.mat  apple_1_1_6_normal.mat  hmp.config  hmp_test
app/kitti_video/: kitti_video.cpp  kitti_video.h
clustering/: CMakeLists.txt
clustering/include/: OnlineStarClustering.h  Vertex.h
clustering/src/: OnlineStarClustering.cpp  Vertex.cpp  Vmeasure.cpp  export.cpp  fastDelete.cpp  fastInsert.cpp  fastUpdate.cpp  helper.cpp  insert.cpp  loadata.cpp  similarity.cpp
cmake/: UseDoxygen.cmake
engine/: CMakeLists.txt
engine/include/: data_proc.h  deftype.h  io.h  proc.h
engine/src/: data_proc.cpp  io.cpp  proc.cpp  procdir.cpp  readHMPfile.cpp  reconstructIm.cpp  strproc.cpp
galaxy/: CMakeLists.txt
galaxy/include/: Galaxy.h  Planet.h
galaxy/src/: Galaxy.cpp  GalaxyIO.cpp  Hquery_accuracy.cpp  LoadFeaPool.cpp  Planet.cpp  computeSimilarity.cpp  galaxy_Vmeasure.cpp  guided_osc_insert.cpp  helper.cpp  loaded_insert_noSim.cpp  nearest_neighbors_insert.cpp  normal_osc_insert.cpp  oscInsert.cpp  oscUpdate.cpp  unloaded_insert.cpp
hmp/: CMakeLists.txt
hmp/include/: hmp.h
hmp/src/: computeHMP.cpp  depthtonormal.cpp  helper.cpp  hmp.cpp  im2colstep.cpp  loadDicts.cpp  maxpooling.cpp  omp.cpp
lposc/: CMakeLists.txt
lposc/backup/: LPOSC.cpp
lposc/include/: LPOSC.h
lposc/src/: LPOSC.cpp  insert.cpp  insert1.cpp  insert2.cpp  label_prop.cpp  save_eval_files.cpp
pcl/: CMakeLists.txt
pcl/include/: pcloud.h
pcl/include/backup/: pcl_func.hpp
pcl/src/: .main.cpp.swp  pcloud.cpp  pcloud_RangeImage.cpp  pcloud_segment.cpp
pcl/src/backup/: RangeImage.cpp  cloud_normal.cpp  cluster_extract.cpp  helper.cpp  main.cpp  main_visRangeImage.cpp  segmentation.cpp
test/: CMakeLists.txt
test/lib/inc/include/: hmp.h
test/src/: Adlposc_test.cpp  center_sim_test.cpp  clustering_test.cpp  cmake ..  compute_simMat.cpp  convert2DepNorm.cpp  convert_pcd2_dni.cpp  draw_bounding_box.cpp  guided_osc_test.cpp  hmp_readfile.cpp  hmp_rgbdeval.cpp  hmp_rgbdeval_full.cpp  hmp_test.cpp  kitti_osc_test.cpp  kitti_sim_analyze.cpp  kitti_video.cpp  loaded_insert_noSim_test.cpp  lposc_test.cpp  magnetic_osc.cpp  merge_kitti.cpp  normal_osc_insert_test.cpp  openmp_test.cpp  pcd2hmp.cpp  pcl_viewer.cpp  pcl_visualizer.cpp  print_distr.cpp  similarity_analysis.cpp
